test/error/FieldReadOnlyModify.fu
class Inner
{
	internal int Bar;
}

public class Test
{
	int Foo;
	Inner() Obj;
	Dictionary<string, int>() Dict;

	void Modify()
	{
		Foo = 1; //ERROR: Cannot modify field in a non-mutating method
		this.Foo = 2; //ERROR: Cannot modify field through a read-only reference
		Test p = this;
		p.Foo = 3; //ERROR: Cannot modify field through a read-only reference
		Obj.Bar = 4; //ERROR: Cannot modify field in a non-mutating method
		this.Obj.Bar = 5; //ERROR: Cannot modify field through a read-only reference
		Dict.Clear(); //ERROR: Cannot modify field in a non-mutating method
		Dict["foo"] = 6; //ERROR: Cannot modify field in a non-mutating method
	}
}
